tests/literal_expr_missing_right_dquote/expected_diagnostics.txt
grammar.peg:1:18: error: Missing '"'.
 1 | ReturnKeyword <- "return
   |                  ~
